--- a/_config.yml
+++ b/_config.yml
@@ -21,9 +21,10 @@
 title: The Blog @ jlolzzz
 email: jlolzzz@proton.me
 description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  This site is a personal blog. For fun, for tech, etc.
+  Feel free to checkout the posts.
+  Full disclaimer - it is currently under construction
+  So if theres not much here yet, please check back later 
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 #twitter_username: jekyllrb
