--- a/_config.yml
+++ b/_config.yml
@@ -29,7 +29,7 @@ baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 #twitter_username: jekyllrb
 github_username:  jlolzzz
-- { platform: bluesky, user_url: "https://bsky.app/profile/jlolzzz.bsky.social"}
+bluesky_username: jlolzzz
 
 # Build settings
 theme: minima
